--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,3 +16,9 @@ jobs:
         python-version: 3.7
     - name : Deploy Step
       run : echo wait a sec deploying in action
+
+promotions:
+  - name: Deploy to Heroku
+    pipeline_file: deploy-heroku.yml
+    auto_promote_on:
+      - result: passed
