--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -15,5 +15,5 @@ jobs:
       with:
         python-version: 3.7
     - name : Deploy Step
-      run : echo wait a sec deploying in action {{HEROKU_USERNAME}}
+      run : echo wait a sec deploying in action "${{secrets.HEROKU_USERNAME}}"
       
