--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,16 +1,26 @@
-name: Docker Image CI
+name: Docker CI
 
 on:
   push:
     branches: [ deployment ]
 
 jobs:
+  test:
+    name: Test - Unit & Integration
+    runs-on: ubuntu-18.04
 
-  build:
+    steps:
+      - uses: actions/checkout@v1
+      - name: Test
+        run: echo Tested before docker push
 
+  docker:
     runs-on: ubuntu-latest
-
+    needs: [test]
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag python-hello-world:$(date +%s)
+    - name: Push to Docker hub
+      run: docker push $REPO
+
