--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,8 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: [test]
+    env:
+      REPO: ${{ secrets.DOCKER_REPO }}
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
