Final Dockerfile & Pipeline file

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,4 +1,4 @@
-name: Pipeline
+name: Flask Pipeline
 
 on:
   push:
@@ -20,5 +20,5 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "hello-flaskdas" #Must be unique in Heroku
-          heroku_email: "ashwinmathew33@gmail.com"
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
           branch: "deployment"
